--- a/lmi/templates/labour_supply.html
+++ b/lmi/templates/labour_supply.html
@@ -6,7 +6,7 @@
 
 <div class="our-services section-pad-t10" style="background-color:#FFFFF">
                 <!-- Hero Area Start-->
-                <div class="slider-area ">
+                <div class="slider-area" style="background-color: #394867">
                     <div class="single-slider section-overly d-flex align-items-center" style="height:300px">
                         <div class="container">
                             <div class="row">
@@ -18,7 +18,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
 
     <div class="container">
         <div class="row d-flex justify-contnet-center">
@@ -28,7 +28,7 @@
                         <img src="{% static 'images/icons/unemployment.png' %}" style="width:70px; height:70px"/>
                     </div>
                     <div class="services-cap">
-                       <h5><a href="{% url 'unemployment' %}">Employment Statistics</a></h5>
+                       <h5><a href="{% url 'employment_statistics' %}">Employment Statistics</a></h5>
                     </div>
                 </div>
             </div>
