--- a/templates/main.html
+++ b/templates/main.html
@@ -26,22 +26,14 @@
     <link rel="stylesheet" href="{% static 'styles/css/slick.css' %}"> 
     <link rel="stylesheet" href="{% static 'styles/css/nice-select.css' %}"> 
     <link rel="stylesheet" href="{% static 'styles/css/style.css' %}">
-
-
-        <!-- Customized Bootstrap Stylesheet -->
-    <!--<link rel="stylesheet" href="{% static 'styles/css/bootstrap.min.css' %}">--> 
-    <!--<link rel="stylesheet" href="{% static 'styles/styles.css' %}">-->
-    <!--<link rel="stylesheet" href="{% static 'styles/css/style.css' %}">-->
-    
-    <!-- Icon Font Stylesheet -->
-    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">-->
-
-    <!-- Libraries Stylesheet -->
-    <!--<link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">-->
-    <!--<link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet"> -->
-
-
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <style>
+      /* Define the size of the Plotly visualization container */
+      #plot-container {
+          width: 100%;
+          height: 400px;
+      }
+    </style>
   </head>
   <body style="background-color:white">
 
