made changes in the home page

--- a/templates/main.html
+++ b/templates/main.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="color:#FFFFFF">Ministry of Labour Sierra Leone.</a> All Rights Reserved.</p>
+            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="color:#FFFFFF">Ministry of Labour and Social Security, Sierra Leone.</a> All Rights Reserved.</p>
           </div>
           <div class="col-md-6">
             <ul class="list-unstyled list-inline float-md-end">
