--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -42,7 +42,7 @@
             <div class="col-xl-6 col-lg-9 col-md-10 my-3">
                 <img src="{% static 'images/hero.png' %}" width="390" height="430" style="position:absolute; left:700px; top: -100px" />
                 <div class="hero__caption">
-                    <h1 style="font-weight: 900 !important">Welcome to Sierra Leone Labour Information System</h1>
+                    <h1 style="font-weight: 900 !important">Welcome to Sierra Leone Labour Market Information System</h1>
                 </div>
             </div>
 
