--- a/accounts/templates/company_register.html
+++ b/accounts/templates/company_register.html
@@ -52,6 +52,10 @@
             <div class="col-6">{{ form.company_certificate|as_crispy_field }}</div>
         </div>
         <div class="row">
+            <div class="col-6">{{ form.company_size|as_crispy_field }}</div>
+            <div class="col-6">{{ form.website|as_crispy_field }}</div>
+        </div>
+        <div class="row">
             <div class="col-6">
                 <button type="submit" class="btn text-white mt-3" style="width:250px; font-weight:400; font-size:15px; background-color:#29569F">Register</button>
             </div>
