--- a/jobs/templates/jobs.html
+++ b/jobs/templates/jobs.html
@@ -1,12 +1,12 @@
 {% extends 'main.html' %}
 {% load static %}
-{% load bootstrap_icons %}
+{% load unicorn %}
 {% block content %}
 
 <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
 
 <div class="container-fluid" style="background-color:white; margin-top:-50px; padding-bottom:60px; padding-top:80px">
-  <h3 class="text-center my-4 font-weight-bold" style="position:relative; left: -220px; font-weight: bold">{{job_count}} Jobs found</h3>
+  <h3 class="text-center my-4 font-weight-bold" style="position:relative; left: -220px; font-weight: bold">{{jobs_count}} Jobs found</h3>
   <div class="row">
     <div class="col-md-3">
         <div class="small-section-tittle2 mb-45">
@@ -51,7 +51,7 @@
             </select>
           </div>
 
-        <button type="submit" class="btn" style="background-color:#29569F; color:#FFFFFF">Apply Filter</button>
+        <button onclick="call('filter_jobs')" class="btn" style="background-color:#29569F; color:#FFFFFF">Apply Filter</button>
       </form>
     </div>
     <div class="col-md-9">
@@ -60,10 +60,10 @@
                 <div class="job-item p-4 mb-4">
                     <div class="row g-4">
                         <div class="col-sm-12 col-lg-8 col-md-8 d-flex align-items-center mb-5"> 
-                            <a href="{% url 'job_detail' job.id %}"><img class="flex-shrink-0 img-fluid border rounded" src="{% static 'images/icons/com-logo-1.jpg' %}" alt="" style="width: 80px; height: 80px;"></a>
+                            <a href="{% url 'job_detail' job.id %}"><img class="flex-shrink-0 img-fluid border rounded" src="{{ job.logo.url}}" alt="" style="width: 80px; height: 80px;"></a>
                             <div class="text-start ps-4">
                                 <h5 class="mb-3"><a href="{% url 'job_detail' job.id %}" style="color:black; font-weight:700">{{job.title}}</a></h5>
-                                <span class="text-truncate me-0"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#29569F" class="bi bi-building" viewBox="0 0 16 16">
+                                <span class="text-truncate me-0" style="padding-right: 25px; font-size: 18px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#29569F" class="bi bi-building" viewBox="0 0 16 16">
                                     <path d="M4 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1ZM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1ZM4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1Zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1Zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1Z"/>
                                     <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V1Zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3V1Z"/>
                                   </svg> {{job.company}}</span>
@@ -111,6 +111,7 @@
     </div>
   </div>
 </div>
+
 
 {% endblock content %}
 
