--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -48,5 +48,12 @@ a.navbar-brand {
 
 .navbar-nav .nav-link:active {
     border-bottom: 2px solid #007bff !important;
-  }
+}
+
+.required-field::before {
+    content: "*";
+    color: red;
+    margin-right: 5px;
+}
+
   
