--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-
+{% load unicorn %}
 <html lang="en">
   {% load static %}
   <head>
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LMIS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    
+    {% unicorn_scripts %}
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="color:#FFFFFF">Ministry of Labour and Social Security, Sierra Leone.</a> All Rights Reserved.</p>
+            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="color:#FFFFFF">Ministry of Labour and Social Security.</a> All Rights Reserved.</p>
           </div>
           <div class="col-md-6">
             <ul class="list-unstyled list-inline float-md-end">
