--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,14 +11,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-        <li class="nav-item dropdown" style="padding-right: 30px">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black; font-weight:600">
-            About SL-LMIS
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'about' %}">About SL-LMIS</a></li>
-            <li><a class="dropdown-item" href="{% url 'contact_us' %}">Contact Us</a></li>
-          </ul>
+        <li class="nav-item" style="padding-right: 30px">
+          <a class="nav-link" href="{% url 'about' %}" style="color:black; font-weight:600">About Us</a>
         </li>
         <li class="nav-item" style="padding-right: 30px">
           <a class="nav-link" href="{% url 'jobs' %}" style="color:black; font-weight:600">Jobs</a>
