--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -176,7 +176,7 @@
 
 
 
-<!-- Blog Area Start -->
+<!-- News and Events Start -->
 <div class="home-blog-area">
     <div class="container">
         <!-- Section Tittle -->
@@ -193,7 +193,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="home-blog-single mb-30">
                     <div class="blog-img-cap">
                         <div class="blog-img">
@@ -212,28 +212,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6">
-                <div class="home-blog-single mb-30">
-                    <div class="blog-img-cap">
-                        <div class="blog-img">
-                            <img src="{% static 'images/home-blog2.jpg' %}" alt="">
-                            <!-- Blog date -->
-                            <div class="blog-date text-center">
-                                <span>24</span>
-                                <p>Now</p>
-                            </div>
-                        </div>
-                        <div class="blog-cap">
-                            <p>|   Properties</p>
-                            <h3><a href="single-blog.html">Footprints in Time is perfect House in Kurashiki</a></h3>
-                            <a href="#" class="more-btn">Read more »</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
-<!-- Blog Area End -->
+<!-- News and Events End -->
 
 {% endblock content %}
