--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -193,25 +193,28 @@
             </div>
         </div>
         <div class="row">
+            {% for news in news_and_events_list %}
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="home-blog-single mb-30">
                     <div class="blog-img-cap">
                         <div class="blog-img">
-                            <img src="{% static 'images/home-blog1.jpg' %}" alt=""> 
+                            {% if news.images.all %}
+                            <img src="{{ news.images.all.0.image.url }}" alt="Image {{ news.images.all.0.pk }}"> 
+                            {% endif %}
                             <!-- Blog date -->
                             <div class="blog-date text-center">
-                                <span>24</span>
-                                <p>Now</p>
+                                <span>{{ news.tag }}</span>
                             </div>
                         </div>
                         <div class="blog-cap">
-                            <p>|   Properties</p>
-                            <h3><a href="single-blog.html">Footprints in Time is perfect House in Kurashiki</a></h3>
+                            <p>|   {{ news.published_date }}</p>
+                            <h3><a href="single-blog.html">{{ news.title }}</a></h3>
                             <a href="#" class="more-btn">Read more »</a>
                         </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
