--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -199,7 +199,7 @@
                     <div class="blog-img-cap">
                         <div class="blog-img">
                             {% if news.images.all %}
-                            <img src="{{ news.images.0.url }}" alt="Image {{ news.pk }}"> 
+                            <img src="{{ news.images.url }}" alt="Image {{ news.pk }}"> 
                             {% endif %}
                             <!-- Blog date -->
                             <div class="blog-date text-center">
