--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -177,8 +177,8 @@
 
 
 <!-- News and Events Start -->
-<div class="home-blog-area mt-4">
-    <div class="container">
+<div class="home-blog-area">
+    <div class="container mt-4">
         <!-- Section Tittle -->
         <div class="row mb-4">
             <div class="col-lg-12">
