--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -178,7 +178,7 @@
 
 <!-- News and Events Start -->
 <div class="home-blog-area">
-    <div class="container mt-4">
+    <div class="container mt-5">
         <!-- Section Tittle -->
         <div class="row mb-4">
             <div class="col-lg-12">
@@ -194,13 +194,11 @@
         </div>
         <div class="row">
             {% for news in news_and_events_list %}
-            <div class="col-xl-4 col-lg-4 col-md-4" style="height:400px">
+            <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="home-blog-single mb-30">
-                    <div class="blog-img-cap">
+                    <div class="blog-img-cap" style="height:400px">
                         <div class="blog-img">
-                            {% for image in news.images.all %}
                             <img src="{{ news.images.url }}" alt="Image {{ news.pk }}"> 
-                            {% endfor %}
                             <!-- Blog date -->
                             <div class="blog-date text-center">
                                 <span>{{ news.tag }}</span>
