--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -178,7 +178,7 @@
 
 <!-- News and Events Start -->
 <div class="home-blog-area">
-    <div class="container mt-5">
+    <div class="container mt-5 pb-4" style="background-color:#f5f5f5;">
         <!-- Section Tittle -->
         <div class="row mb-4">
             <div class="col-lg-12">
