--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -198,7 +198,7 @@
                 <div class="home-blog-single mb-30">
                     <div class="blog-img-cap" style="height:400px">
                         <div class="blog-img">
-                            <img src="{{ news.images.url }}" alt="Image {{ news.pk }}"> 
+                            <img src="{{ news.image1.url }}" alt="Image {{ news.pk }}"> 
                             <!-- Blog date -->
                             <div class="blog-date text-center">
                                 <span>{{ news.tag }}</span>
