--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -177,11 +177,11 @@
 
 
 <!-- News and Events Start -->
-<div class="home-blog-area">
-    <div class="container mt-5 pb-4" style="background-color:#f5f5f5;">
+<div class="home-blog-area" style="background-color:#f5f5f5;">
+    <div class="container mt-5">
         <!-- Section Tittle -->
         <div class="row mb-4">
-            <div class="col-lg-12">
+            <div class="col-lg-12 pb-4">
                 <div class="row">
                     <div class="col-lg-6" style="text-align: left;">
                         <h2 style="color: black; font-weight: bold;">Latest News and Events</h2>
@@ -198,7 +198,7 @@
                 <div class="home-blog-single mb-30">
                     <div class="blog-img-cap" style="height:400px">
                         <div class="blog-img">
-                            <img src="{{ news.image1.url }}" alt="Image {{ news.pk }}"> 
+                            <img src="{{ news.image1.url }}" alt=""> 
                             <!-- Blog date -->
                             <div class="blog-date text-center">
                                 <span>{{ news.tag }}</span>
