--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -178,10 +178,10 @@
 
 <!-- News and Events Start -->
 <div class="home-blog-area" style="background-color:#f5f5f5;">
-    <div class="container mt-5">
+    <div class="container pt-5">
         <!-- Section Tittle -->
         <div class="row mb-4">
-            <div class="col-lg-12 pb-4">
+            <div class="col-lg-12 pb-3">
                 <div class="row">
                     <div class="col-lg-6" style="text-align: left;">
                         <h2 style="color: black; font-weight: bold;">Latest News and Events</h2>
