--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -194,9 +194,9 @@
         </div>
         <div class="row">
             {% for news in news_and_events_list %}
-            <div class="col-xl-4 col-lg-4 col-md-4">
-                <div class="home-blog-single mb-30">
-                    <div class="blog-img-cap" style="height:400px">
+            <div class="col-xl-4 col-lg-4 col-md-4 mb-5">
+                <div class="home-blog-single mb-30" style="height:400px">
+                    <div class="blog-img-cap">
                         <div class="blog-img">
                             <img src="{{ news.image1.url }}" alt="" height="200"> 
                             <!-- Blog date -->
