--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -193,7 +193,7 @@
           <div class="job-item card mb-4" style="height:420px">
             <img src="{{ job.logo.url}}" class="card-img-top px-4" alt="{{ job.title}}" height="200" width="100%">
             <div class="card-body">
-              <h5 class="card-title" style="width: 100%"><b>{{ job.title}}</b></h5>
+              <h5 class="card-title"><b>{{ job.title}}</b></h5>
               <p class="card-text"><small class="text-muted">Application ends: {{ job.expiration_date}}</small></p>
               <span class="text-truncate me-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#29569F" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="blog-cap">
                             <p>|   {{ news.published_date }}</p>
-                            <h5><a href="#">{{ news.title }}</a></h5>
+                            <h5 style="width: 100%">{{ news.title }}</h5>
                             <a href="#" class="more-btn">Read more »</a>
                         </div>
                     </div>
