--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -243,7 +243,7 @@
                     <div class="blog-cap">
                         <p>|   {{ news.published_date }}</p>
                         <h5 style="width: 100%">{{ news.title }}</h5>
-                        <a href="#" class="more-btn">Read more »</a>
+                        <a href="#" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
                     </div>
                 </div>
             </div>
