--- a/accounts/templates/company_register.html
+++ b/accounts/templates/company_register.html
@@ -45,7 +45,7 @@
         </div>
         <div class="row">
             <div class="col-6">{{ form.sector|as_crispy_field }}</div>
-            <div class="col-6">{{ form.region|as_crispy_field }}</div>
+            <div class="col-6">{{ form.location|as_crispy_field }}</div>
         </div>
         <div class="row">
             <div class="col-6">{{ form.company_logo|as_crispy_field }}</div>
