--- a/jobs/templates/post_job.html
+++ b/jobs/templates/post_job.html
@@ -12,8 +12,10 @@
             
         </div>
         <div class="row">
-            <div class="col-6">{{ form.description|as_crispy_field }}</div>
-            <div class="col-6">{{ form.requirements|as_crispy_field }}</div>
+            <div class="col-12">{{ form.description|as_crispy_field }}</div>
+        </div>
+        <div class="row">
+            <div class="col-12">{{ form.requirements|as_crispy_field }}</div>
         </div>
         <div class="row">
             <div class="col-6">{{ form.sector|as_crispy_field }}</div>
