--- a/accounts/templates/jobseeker_register.html
+++ b/accounts/templates/jobseeker_register.html
@@ -49,7 +49,7 @@
         </div>
         <div class="row">
             <div class="col-6">{{ form.looking_for|as_crispy_field }}</div>
-            <div class="col-6">{{ form.location|as_crispy_field }}</div>
+            <div class="col-6">{{ form.district|as_crispy_field }}</div>
         </div>
         <div class="row">
             <div class="col-6">{{ form.profile_pic|as_crispy_field }}</div>
