--- a/templates/main.html
+++ b/templates/main.html
@@ -59,10 +59,11 @@
           <div class="col-md-3">
             <h5 class="text-white">Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="https://labour.gov.sl/">Ministry of Labour and Social Security</a></li>
-              <li><a href="http://mic.gov.sl/">Ministry of Information and Communication</a></li>
-              <li><a href="https://mbsse.gov.sl/">Ministry of Technical and Higher Education</a></li>
-              <li><a href="https://www.statistics.sl/">Statistics Sierra Leone</a></li>
+              <li><a href="https://mof.gov.sl/">Ministry of Finance</a></li>
+              <li><a href="https://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html">Statistics Sierra Leone</a></li>
+              <li><a href="https://www.ilo.org/africa/countries-covered/sierra-leone/lang--en/index.htm">Internation Labour Organization (ILO)</a></li>
+              <li><a href="https://ilostat.ilo.org/data/country-profiles/">Internation Labour Organization (ILOSTAT)</a></li>
+              <li><a href="https://data.worldbank.org/indicator/SL.TLF.ACTI.FE.ZS?locations=SL">The World Bank</a></li>
             </ul>
           </div>
           <div class="col-md-3">
