--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -73,8 +73,8 @@
             <a href="#">
                 <div class="card-header">
                     <img src="{% static 'images/icons/youth.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                    <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px">Working Age</h5>
-                    <h3 style="padding-left: 25px; color: #29569F; font-size: 35px; font-weight: 800">6,084,046</h3>
+                    <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px">Working Age (15-64)</h5>
+                    <h3 style="padding-left: 25px; color: #29569F; font-size: 35px; font-weight: 800">52%</h3>
                 </div>
             </a>
         </div>
@@ -83,9 +83,9 @@
             <div class="card">
                 <a href="#">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/analytics.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px">Employment Rate</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">5.2%</h3>
+                        <img src="{% static 'images/icons/bar-chart.png' %}" width="80" height="80" style="position:absolute; left:90px" />
+                        <h5 class="card-title px-2" style="font-weight:800; margin-top: 100px">Unemployment Rate</h5>
+                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">3.6%</h3>
                     </div>
                 </a>
             </div>
@@ -94,20 +94,21 @@
             <div class="card">
                 <a href="#">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/bar-chart.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-2" style="font-weight:800; margin-top: 100px">Unemployment Rate</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">5.3%</h3>
+                        <img src="{% static 'images/icons/analytics.png' %}" width="80" height="80" style="position:absolute; left:90px" />
+                        <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px">Employer</h5>
+                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">5.2%</h3>
                     </div>
                 </a>
             </div>
         </div>
+        
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="card">
                 <a href="#">
                     <div class="card-header">
                         <img src="{% static 'images/icons/job-search.png' %}" width="80" height="80" style="position:absolute; left:90px" />
                         <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px">Job Vacancy</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">220</h3>
+                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">{{jobs_count}}</h3>
                     </div>
                 </a>
             </div>
