--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -73,8 +73,8 @@
             <a href="#">
                 <div class="card-header">
                     <img src="{% static 'images/icons/youth.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                    <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px">Working Age (15-64)</h5>
-                    <h3 style="padding-left: 25px; color: #29569F; font-size: 35px; font-weight: 800">52%</h3>
+                    <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center">Working Age (15-64)</h5>
+                    <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">52%</h3>
                 </div>
             </a>
         </div>
@@ -84,8 +84,8 @@
                 <a href="#">
                     <div class="card-header">
                         <img src="{% static 'images/icons/bar-chart.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-2" style="font-weight:800; margin-top: 100px">Unemployment Rate</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">3.6%</h3>
+                        <h5 class="card-title px-2" style="font-weight:800; margin-top: 100px; text-align: center">Unemployment Rate</h5>
+                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">3.6%</h3>
                     </div>
                 </a>
             </div>
@@ -95,8 +95,8 @@
                 <a href="#">
                     <div class="card-header">
                         <img src="{% static 'images/icons/analytics.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px">Employer</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">5.2%</h3>
+                        <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px; text-align: center">Employer</h5>
+                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">5.2%</h3>
                     </div>
                 </a>
             </div>
@@ -107,8 +107,8 @@
                 <a href="#">
                     <div class="card-header">
                         <img src="{% static 'images/icons/job-search.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px">Job Vacancy</h5>
-                        <h3 style="padding-left: 75px; color: #29569F; font-size: 35px; font-weight: 800">{{jobs_count}}</h3>
+                        <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center">Job Vacancy</h5>
+                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">{{jobs_count}}</h3>
                     </div>
                 </a>
             </div>
