--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <nav class="navbar navbar-expand-lg navbar-light container-fluid">
   <a class="navbar-brand" href="{% url 'home' %}">
