--- a/templates/main.html
+++ b/templates/main.html
@@ -121,5 +121,11 @@
   <script src="{% static 'js/main.js' %}"></script> 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
+  <script>
+    $(document).ready(function () {
+        $('[data-toggle="collapse"]').collapse();
+    });
+  </script>
+
   </body>
 </html>
