--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,6 +34,8 @@
             <li><a class="dropdown-item" href="#">Policies & Regulations</a></li>
             <li><a class="dropdown-item" href="#">Reports & Surveys</a></li>
             <li><a class="dropdown-item" href="#">News & Events</a></li>
+            <li><a class="dropdown-item" href="#">Downloads</a></li>
+            <li><a class="dropdown-item" href="#">External Resources</a></li>
           </ul>
         </li>
       </ul>
