--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
             <li><a class="dropdown-item" href="#">Policies & Regulations</a></li>
             <li><a class="dropdown-item" href="#">Reports & Surveys</a></li>
             <li><a class="dropdown-item" href="#">News & Events</a></li>
-            <li><a class="dropdown-item" href="#">Downloads</a></li>
+            <li><a class="dropdown-item" href="{% static 'resource_list' %}">Downloads</a></li>
             <li><a class="dropdown-item" href="#">External Resources</a></li>
           </ul>
         </li>
