--- a/career_dev/templates/career_dev.html
+++ b/career_dev/templates/career_dev.html
@@ -29,7 +29,7 @@
             {% for institution in institutions %}
             <tr>
                 <td>{{ institution.name }}</td>
-                <td><a href="{{ institution.url }}" class="btn btn-primary">Go to site</a></td>
+                <td><a href="{{ institution.url }}" class="btn btn-primary" target="_blank">Go to site</a></td>
             </tr>
             {% endfor %}
         </tbody>
