--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -184,7 +184,7 @@
                     <h2 style="color: black; font-weight: bold;">Latest Jobs</h2>
                 </div>
                 <div class="col-lg-6" style="text-align: right;">
-                    <a href="#" style="color: #004F98; font-size: 18px;">View all jobs &#8811;</a>
+                    <a href="{% url 'jobs' %}" style="color: #004F98; font-size: 18px;">View all jobs &#8811;</a>
                 </div>
             </div>
           </div>
@@ -202,7 +202,7 @@
             <span class="text-truncate me-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#29569F" class="bi bi-clock-fill" viewBox="0 0 16 16">
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
               </svg> {{job.contract}}</span>     
-              <a href="#" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+              <a href="{% url 'job_detail' job.id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
             </div>
           </div>
         </div>
@@ -223,7 +223,7 @@
                         <h2 style="color: black; font-weight: bold;">Latest News and Events</h2>
                     </div>
                     <div class="col-lg-6" style="text-align: right;">
-                        <a href="#" style="color: #004F98; font-size: 18px;">View all &#8811;</a>
+                        <a href="{% url 'news_and_event_detail' %}" style="color: #004F98; font-size: 18px;">View all &#8811;</a>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                     <div class="blog-cap">
                         <p>|   {{ news.published_date }}</p>
                         <h5 style="width: 100%">{{ news.title }}</h5>
-                        <a href="#" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+                        <a href="{% url 'news_and_event_detail' news_id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
                     </div>
                 </div>
             </div>
