--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -223,7 +223,7 @@
                         <h2 style="color: black; font-weight: bold;">Latest News and Events</h2>
                     </div>
                     <div class="col-lg-6" style="text-align: right;">
-                        <a href="{% url 'news_and_event_detail' %}" style="color: #004F98; font-size: 18px;">View all &#8811;</a>
+                        <a href="{% url 'news_and_events' %}" style="color: #004F98; font-size: 18px;">View all &#8811;</a>
                     </div>
                 </div>
             </div>
