--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
             <li><a class="dropdown-item" href="#">Labour Laws</a></li>
             <li><a class="dropdown-item" href="#">Policies & Regulations</a></li>
             <li><a class="dropdown-item" href="#">Reports & Surveys</a></li>
-            <li><a class="dropdown-item" href="#">News & Events</a></li>
+            <li><a class="dropdown-item" href="{% url 'news_and_events' %}">News & Events</a></li>
             <li><a class="dropdown-item" href="{% url 'download_list' %}">Downloads</a></li>
             <li><a class="dropdown-item" href="#">External Resources</a></li>
           </ul>
