--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -244,7 +244,7 @@
                     <div class="blog-cap">
                         <p>|   {{ news.published_date }}</p>
                         <h5 style="width: 100%">{{ news.title }}</h5>
-                        <a href="{% url 'news_and_event_detail' news_id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+                        <a href="{% url 'news_and_event_detail' news.id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
                     </div>
                 </div>
             </div>
