--- a/news_and_events/templates/news_and_events.html
+++ b/news_and_events/templates/news_and_events.html
@@ -34,12 +34,31 @@
                     <div class="blog-cap">
                         <p>|   {{ news.published_date }}</p>
                         <h5 style="width: 100%">{{ news.title }}</h5>
-                        <a href="{% url 'news_and_event_detail' news_id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+                        <a href="{% url 'news_and_event_detail' news.id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+
+        <nav aria-label="Page navigation example" class="offset-5 mb-5 mt-5">
+            <ul class="pagination">
+                {% if news_and_events_list.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ news_and_events_list.previous_page_number }}" style="background-color:#29569F; color:#FFFFFF">Previous</a></li>
+                {% endif %}
+                {% for num_page in  news_and_events_list.paginator.page_range %}
+                {% if news_and_events_list.number == num_page %}
+                    <li class="page-item active"><a class="page-link" href="?page={{ num_page }}" style="background-color:#29569F; color:#FFFFFF">{{num_page}}</a></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ num_page }}" style="background-color:#29569F; color:#FFFFFF">{{num_page}}</a></li>
+                {% endif %}
+                {% endfor %}
+                {% if news_and_events_list.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ news_and_events_list.next_page_number }}" style="background-color:#29569F; color:#FFFFFF">Next</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+
     </div>
 </div>
 
