--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -231,12 +231,12 @@
         <div class="row">
             {% for news in news_and_events_list %}
             <div class="col-xl-4 col-lg-4 col-md-4 mb-5">
-                <div class="home-blog-single mb-30" style="height:400px">
+                <div class="home-blog-single mb-30" style="height:420px">
                     <div class="blog-img-cap">
                         <div class="blog-img">
-                            <img src="{{ news.image1.url }}" alt="" height="200"> 
+                            <img src="{{ news.image1.url }}" alt="" height="200" width="100%"> 
                             <!-- Blog date -->
-                            <div class="blog-date text-center">
+                            <div class="blog-date text-center mb-5">
                                 <span>{{ news.tag }}</span>
                             </div>
                         </div>
