--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -232,12 +232,12 @@
             <div class="row">
                 {% for news in news_and_events_list %}
                 <div class="col-xl-4 col-lg-4 col-md-4 mb-5">
-                    <div class="home-blog-single mb-30 mb-3 flex-fill" style="height:420px">
+                    <div class="home-blog-single mb-30 mb-3 flex-fill" style="height:450px">
                         <div class="blog-img-cap">
                             <div class="blog-img">
                                 <img src="{{ news.image1.url }}" alt="" height="200" width="100%"> 
                                 <!-- Blog date -->
-                                <div class="blog-date text-center mb-5">
+                                <div class="blog-date text-center">
                                     <span>{{ news.tag }}</span>
                                 </div>
                             </div>
