--- a/news_and_events/templates/news_and_event_details.html
+++ b/news_and_events/templates/news_and_event_details.html
@@ -6,8 +6,7 @@
         <div class="row">
             <div class="col-12 mx-auto">
                 <article>
-                    
-                    <div id="carouselExample" class="carousel slide">
+                    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img src="{{ news.image1.url }}" class="d-block w-100" alt="...">
@@ -23,15 +22,16 @@
                           </div>
                           {% endif %}
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
                     </div>
+                    
                     <div class="mt-4">
                         Tag: <span class="badge bg-secondary">{{ news.tag }}</span>
                     </div>
